k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
 name: pal-tracker
 labels:
  app: pal-tracker
 annotations:
  kubernetes.io/ingress.class: nginx
spec:
 backend:
  serviceName: pal-tracker
  servicePort: 8080
